styles/es-shared/_es-nested-collapsable.scss
// stylelint-disable declaration-no-important, number-max-precision, selector-max-specificity

@mixin es-nested-collapsable-shadow($size, $color, $bgColor: 'var(--es-admin-pure-white)') {
	box-shadow: 0 0 0 calc(#{$size} - 1px) #{$bgColor}, 0 0 0 #{$size} #{$color};
}

.es-nested-collapsable {
	border-radius: 0.125rem;

	box-shadow: 0 0 0 0.05rem var(--es-admin-pure-white), 0 0 0 0.05rem var(--es-admin-pure-white);

	transition: {
		property: border-radius, box-shadow;
		timing-function: var(--es-ease-out-cubic);
		duration: 0.3s;
	}

	&.is-open {
		@include es-nested-collapsable-shadow(0.4rem, var(--wp-admin-theme-color));
	}

	&:has(.is-open) {
		border-radius: 0.175rem;

		@include es-nested-collapsable-shadow(0.7rem, var(--es-admin-cool-gray-100));

		--wp-admin-theme-color: var(--es-admin-cool-gray-500);

		.is-open {
			// stylelint-disable-next-line custom-property-pattern
			--wp-admin-theme-color: rgb(var(--wp-admin-theme-color--rgb));

			@include es-nested-collapsable-shadow(0.4rem, var(--wp-admin-theme-color));
		}
	}

	&:has(.is-open .is-open) {
		border-radius: 0.25rem;

		@include es-nested-collapsable-shadow(0.75rem, var(--es-admin-cool-gray-100));

		--wp-admin-theme-color: var(--es-admin-cool-gray-400);

		.is-open {
			--wp-admin-theme-color: var(--es-admin-cool-gray-500);

			@include es-nested-collapsable-shadow(0.55rem, var(--es-admin-cool-gray-200));

			.is-open {
				// stylelint-disable-next-line custom-property-pattern
				--wp-admin-theme-color: rgb(var(--wp-admin-theme-color--rgb));

				@include es-nested-collapsable-shadow(0.35rem, var(--wp-admin-theme-color));
			}
		}
	}

	// Full-color toggle, specific to the collapsable components.
	.es-full-color-toggle {
		.es-toggle-icon-thumb,
		.es-toggle-icon-container {
			--es-toggle-icon-thumb-stroke: var(--es-admin-pure-white);
			--es-toggle-icon-thumb-fill: var(--es-admin-pure-white);
			--es-toggle-icon-thumb-fill-opacity: 1;
			--es-toggle-icon-container-fill: var(--es-admin-cool-gray-500);
			--es-toggle-icon-container-fill-opacity: 1;
			--es-toggle-icon-container-stroke: var(--es-admin-cool-gray-500);
		}

		&.is-active {
			.es-toggle-icon-thumb {
				// This should always be white.
				--es-toggle-icon-thumb-stroke: var(--es-admin-pure-white);
				--es-toggle-icon-thumb-fill: var(--es-admin-pure-white);
				--es-toggle-icon-thumb-fill-opacity: 1;
				transform: translateX(0.5rem);
			}

			.es-toggle-icon-container {
				--es-toggle-icon-container-stroke: var(--wp-admin-theme-color, var(--es-admin-accent-color-default));
				--es-toggle-icon-container-fill: var(--wp-admin-theme-color, var(--es-admin-accent-color-default));
				--es-toggle-icon-container-fill-opacity: 1;
			}
		}
	}
}

// stylelint-enable declaration-no-important, number-max-precision, selector-max-specificity

